Removed overflow in css, fixed menu credits

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body {
     background: url(../img/mine-bg.png) repeat center top;
-    overflow: hidden;
     font-family: Verdana, sans-serif;
 }
 
